--- a/www/templates/tab-search.html
+++ b/www/templates/tab-search.html
@@ -1,15 +1,14 @@
-<ion-view view-title="Chats">
+<ion-view view-title="Search">
   <ion-content>
+    <label class="item item-input">
+      <span class="input-label">Search</span>
+      <input type="text" ng-model="query" ng-change="search(query)">
+  </label>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
+      <ion-item class="item-avatar item-icon-right" ng-repeat="video in videos" type="item-text-wrap">
+        <img ng-src="{{video.thumbnail}}">
+        <h2>{{video.title}} {{duration(video.duration)}}</h2>
+        <p>{{video.description}}</p>
       </ion-item>
     </ion-list>
   </ion-content>
