--- a/static/youtupi.css
+++ b/static/youtupi.css
@@ -46,7 +46,7 @@
 	text-align: center;
 }
 
-#playlist > .ui-header {
+#playlist > .ui-header, #search > .ui-header {
     position: fixed;
     width: 100%;
     top:0;
@@ -54,6 +54,19 @@
     z-index:999;
 }
 
-#playlist > .ui-content {
+#playlist > .ui-content, #search > .ui-content {
     margin-top: 72px;
+}
+
+.spinnercontainer {
+    display: block;
+    height: 20px;
+    text-align: center;
+    font-size: 12px;
+    color: #9999bb;
+    text-shadow: white 1px 1px;
+}
+
+.spinner {
+    transition: opacity 1s ease-out;
 }
